third repo fixed

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
 <header>
 <video autoplay muted loop id="backgroundVideo">
-<source src="/Users/olgapodsiadlo/Desktop/strona 3/pictures/forest.mp4" type="video/mp4">
+<source src="/images/forest.mp4" type="video/mp4">
 </video>
 <h1> Inflorescent Art</h1>
 <nav>
@@ -42,11 +42,11 @@
    Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi fugiat maxime excepturi dolore vitae labore magni, nulla aliquid nostrum rem voluptate a? Rerum quae sunt placeat recusandae natus libero sequi.
    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Libero, sed. Vitae tempore omnis labore quia saepe quisquam laboriosam eaque dolorum numquam! Culpa pariatur, exercitationem aliquam unde fugit beatae repellat voluptates.
 </p>
-<img src="/Users/olgapodsiadlo/Desktop/strona 3/pictures/11.png">
+<img src="/images/11.png">
 </section>
 <section id="art">
 <h3> Art </h3>
-<img src="/Users/olgapodsiadlo/Desktop/strona 3/pictures/leaves3.png">
+<img src="/images/leaves3.png">
 <figure class="circle"></figure>
 <p>
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quam cupiditate optio eligendi magnam, impedit rerum earum inventore autem dicta excepturi voluptatem commodi necessitatibus fugit officia magni vero quo non repellendus?
@@ -57,9 +57,9 @@
         </p>
 </section> 
 <section class="images">      
-<img class="first" src="/Users/olgapodsiadlo/Desktop/strona 3/pictures/3.png">
-<img class="second" src ="/Users/olgapodsiadlo/Desktop/strona 3/pictures/palms1.jpg">
-<img class="third" src="/Users/olgapodsiadlo/Desktop/strona 3/pictures/palms2.jpg">
+<img class="first" src="/images/3.png">
+<img class="second" src ="/images/palms1.jpg">
+<img class="third" src="/images/palms2.jpg">
 <div class="box-a"></div>
 </section>      
 <section class="background">
